// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index full_refresh sync mode 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
          },
        ],
      },
    },
  },
]
`;

exports[`index incremental sync mode - V1 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
            "metadata": Object {
              "refreshedAt": 12,
            },
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
            "metadata": Object {
              "refreshedAt": 23,
            },
          },
        ],
      },
    },
  },
]
`;

exports[`index incremental sync mode - V2 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
            "refreshedAt": "2022-10-19T22:02:14.483165+00:00",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
            "refreshedAt": "2023-11-14T22:13:20.000Z",
          },
        ],
      },
    },
  },
]
`;
